// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dependent data source 1`] = `
"{
  \\"data\\": {
    \\"test_data_source\\": {
      \\"data_source\\": {
        \\"depends_on\\": [
          \\"test_resource.resource\\"
        ],
        \\"name\\": \\"foo\\"
      }
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
      }
    ]
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"resource\\": {
        \\"name\\": \\"foo\\"
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"test\\": {
        \\"version\\": \\"~> 2.0\\"
      }
    }
  }
}"
`;

exports[`minimal configuration 1`] = `
"{
  \\"data\\": {
    \\"test_data_source\\": {
      \\"test\\": {
        \\"name\\": \\"foo\\"
      }
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
      }
    ]
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"test\\": {
        \\"version\\": \\"~> 2.0\\"
      }
    }
  }
}"
`;

exports[`with any map 1`] = `
"{
  \\"data\\": {
    \\"test_data_source\\": {
      \\"test\\": {
        \\"name\\": \\"foo\\"
      }
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
      }
    ]
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test-resource\\": {
        \\"name\\": \\"\${data.test_data_source.test.any_map[\\\\\\"id\\\\\\"]}\\"
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"test\\": {
        \\"version\\": \\"~> 2.0\\"
      }
    }
  }
}"
`;

exports[`with boolean map 1`] = `
"{
  \\"data\\": {
    \\"test_data_source\\": {
      \\"test\\": {
        \\"name\\": \\"foo\\"
      }
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
      }
    ]
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test-resource\\": {
        \\"name\\": \\"\${data.test_data_source.test.boolean_map[\\\\\\"id\\\\\\"]}\\"
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"test\\": {
        \\"version\\": \\"~> 2.0\\"
      }
    }
  }
}"
`;

exports[`with complex computed list 1`] = `
"{
  \\"data\\": {
    \\"test_data_source\\": {
      \\"test\\": {
        \\"name\\": \\"foo\\"
      }
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
      }
    ]
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test-resource\\": {
        \\"name\\": \\"\${data.test_data_source.test.complex_computed_list[0].id}\\"
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"test\\": {
        \\"version\\": \\"~> 2.0\\"
      }
    }
  }
}"
`;

exports[`with number map 1`] = `
"{
  \\"data\\": {
    \\"test_data_source\\": {
      \\"test\\": {
        \\"name\\": \\"foo\\"
      }
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
      }
    ]
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test-resource\\": {
        \\"name\\": \\"\${data.test_data_source.test.number_map[\\\\\\"id\\\\\\"]}\\"
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"test\\": {
        \\"version\\": \\"~> 2.0\\"
      }
    }
  }
}"
`;

exports[`with string map 1`] = `
"{
  \\"data\\": {
    \\"test_data_source\\": {
      \\"test\\": {
        \\"name\\": \\"foo\\"
      }
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
      }
    ]
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test-resource\\": {
        \\"name\\": \\"\${data.test_data_source.test.string_map[\\\\\\"id\\\\\\"]}\\"
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"test\\": {
        \\"version\\": \\"~> 2.0\\"
      }
    }
  }
}"
`;
